# LittlePenguin

./: .gitignore  README.md
cache/: CMakeLists.txt
cache/include/: CacheServer.h  HashSlot.h  LRUCache.h  TcpServer.h  TcpSocket.h  ThreadPool.hpp  cmcdata.pb.h  command_cache.h  global_extern.h  user_data.h
cache/src/: CacheServer.cpp  LRUCache.cpp  TcpServer.cpp  TcpSocket.cpp  cache_main.cpp  cmcdata.pb.cc  cmcdata.proto  command_cache.cpp  crc16.cpp  global_extern.cpp
client/: .gitignore  CMakeLists.txt
client/include/: CacheNode.h  HashSlot.h  cmcdata.pb.h  command.h  crc16.h
client/src/: HashSlot.cc  client_main.cpp  cmcdata.pb.cc  cmcdata.proto  command.cpp  crc16.cpp
master/: CMakeLists.txt
master/include/: CacheNode.h  HashSlot.h  MasterServer.h  TaskQueue.h  TcpServer.h  user_data.h
master/src/: HashSlot.cc  MasterServer.cpp  TcpServer.cpp  cmcdata.proto  master_main.cpp
